--- a/notebook/AIG150_Lab1-StudentName.ipynb
+++ b/notebook/AIG150_Lab1-StudentName.ipynb
@@ -2031,9 +2031,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "mlproject",
    "language": "python",
-   "name": "python3"
+   "name": "mlproject"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2045,7 +2045,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
